[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels/level_pedo/torres/torre.gd" type="Script" id=1]
[ext_resource path="res://levels/level_pedo/torres/tower_spr.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level_pedo/assets/png/aura_boss_1.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "shoot"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 170.786

[sub_resource type="CapsuleShape2D" id=3]
radius = 20.6362
height = 56.1046

[node name="torre" type="Area2D" groups=[
"torres",
]]
position = Vector2( 0.785949, 1.2063 )
script = ExtResource( 1 )
attackType = "normal"

[node name="Sprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 3.90033, -1.28131 )
script = null

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "shoot"
anims/shoot = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="detector" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.594588, -1.18922 )
shape = SubResource( 2 )

[node name="upgradeTimer" type="Timer" parent="."]
autostart = true

[node name="aura_boss_1" type="Sprite" parent="."]
visible = false
position = Vector2( -1.68407, -14.8375 )
scale = Vector2( 0.182609, 0.136033 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.07288e-06, 0.594604 )
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="upgradeTimer" to="." method="_on_upgradeTimer_timeout"]
